# NexusDownloadFlow-2023

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NexusDownloadFlow-2023.spec  Pipfile  README.md  TODO.md  build.py  build.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: pyinstaller-windows.yaml  pytest.yaml  release.yaml  ruff-lint.yaml
config/: definitions.py
scripts/: create_exe.ps1
src/: assets.py  automation.py  config.py  definitions.py  logging_config.py  main.py
tests/: test_assets.py  test_automation.py  test_config.py  test_logging_config.py  test_main.py
