[project]
name = "nexusdownloadflow-2023"
version = "0.1.0"
description = "Auto-clicker for Nexus download flow using computer vision"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mss==6.1.0",
    "opencv-python==4.5.5.64",
    "pyautogui==0.9.54",
    "toml==0.10.2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
