[project]
name = "nexusdownloadflow"
version = "1.1.0"
description = "Auto-clicker for Nexus download flow using computer vision"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "loguru>=0.7.3",
    "mss==6.1.0",
    "opencv-python>=4.12",
    "pydantic>=2.11.0",
    "pyautogui==0.9.54",
    "toml==0.10.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pyinstaller>=6.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
